remove irrelevant loaction property from unit some fixes to notification
