# app/api/units/route.ts
@@ -29,7 +29,6 @@ export async function POST(request: Request) {
       "id",
       "name",
       "property",
-      "location",
       "address",
       "monthlyRent",
       "tenant",
@@ -48,7 +47,6 @@ export async function POST(request: Request) {
       id: body.id,
       name: body.name,
       property: body.property,
-      location: body.location,
       address: body.address,
       monthlyRent: body.monthlyRent,
       tenant: body.tenant,
